# URL-shortener---Midterm-SWE

./: .README.md.swp  .env.example  LICENSE  README.md  alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 76643119b800_initial_migration_for_url_shortener.py
src/: main.py
src/api/: __init__.py  urls.py
src/controllers/: url_controller.py
src/core/: config.py
src/db/: config.py  database.py  session.py
src/models/: url.py
src/repositories/: __init__.py  base_repo.py  create_url_repository.py  delete_url_repository.py  get_all_urls_repository.py  redirect_to_url_repository.py  url_repository.py
src/schemas/: url.py
src/services/: __init__.py  base_service.py  create_url_service.py  delete_url_service.py  get_all_urls_service.py  redirect_to_url_service.py  url_service.py
tests/: test_refactored_logic.py
